# better-email-routing

./: .env.example  .gitignore  README.md  STARTUP.md  app.defaults.env  electron-builder.json  package-lock.json  package.json  server.js  server.test.cjs
.github/workflows/: release-macos.yml
docs/: CLOUDFLARE_SETUP.md  RELEASE.md
electron/: main.cjs  preload.cjs
public/: app.js  email-rendering.js  email-rendering.test.cjs  index.html  layout-metrics.js  layout-metrics.test.cjs  mailbox-state.js  mailbox-state.test.cjs  message-body-state.js  message-body-state.test.cjs  setup-import.test.cjs  styles.css  thread-triage.js  thread-triage.test.cjs
scripts/: build-tauri-release.mjs  build-tauri-sidecar.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
worker/: .dev.vars.example  README.md  wrangler.jsonc
worker/migrations/: 0001_mailbox.sql  0002_thread_state.sql  0004_message_raw_source.sql
worker/src/: email-parser.js  email-parser.test.mjs  index.js  reprocess-raw-bodies.test.mjs  thread-filters.js  thread-filters.test.mjs  worker-email-handler.test.mjs
